src/pages/Logement/logement.css
.logement {
  padding: 0 40px;
}

.logement__infos {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  margin: 20px 0;
}

.logement__infos--left h1 {
  color: #FF6060;
  font-size: 36px;
  font-weight: 500; 
  margin: 0;
}

.logement__infos--left p {
  color: #6b6375; 
  font-size: 18px;
}


.logement__tags {
  display: flex;
  gap: 10px;
  margin-top: 10px;
}

.logement__tag {
  background-color: #FF6060;
  color: white;
  padding: 5px 15px;
  border-radius: 15px;
  font-size: 14px;
}


.logement__host {
  display: flex;
  flex-direction: row;  
  align-items: center;
  gap: 10px;
}

.logement__host span {
  color: #FF6060;
  font-size: 16px;
  text-align: right;
  max-width: 80px;  
}

.logement__host img {
  width: 64px;
  height: 64px;
  border-radius: 50%;
  object-fit: cover;
}

.h1 {
  color: #FF6060;
  font-size: 36px;
}

.logement_infos_left p {
  color: black;
  font-size: 18px;
  text-align: left;
  margin: 8px 0 0 0;
}

.logement_infos_left h1 {
  font-size: 36px;
  margin: 0;
  color: #FF6060;
  font-weight: 500;
  text-align: left;  
}

.logement__collapses {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 20px;
}

.logement_carrousel_counter {
  position: absolute;
  bottom: 10px;
  right: 50%;
  transform: translateX(50%);
  color: white;
  padding: 5px 10px;
  border-radius: 15px;
  font-size: 14px;
}

.logement_infos_right {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  gap: 15px;
}

.logement__rating {
  display: flex;
  gap: 4px;
}

.logement__rating svg {
  font-size: 20px;
}


@media (max-width: 375px) {
  .logement {
    padding: 0 20px;
  }


.logement__infos {
  flex-direction: column;
}

.logement_infos_right {
  display: flex;
  flex-direction: row-reverse;
  justify-content: space-between;
  align-items: center;
  width: 100%;
}


.logement__rating {
  margin-top: 8px;
  text-align: right;
}


.logement__host {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 10px;
}

.logement__collapses {
  grid-template-columns: 1fr;
}

.logement__tags {
  flex-wrap: wrap;
}

.logement__rating svg {
  font-size: 16px;
}

.logement__host img {
  width: 40px;
  height: 40px;
}

.logement__host span {
  font-size: 14px;
}
 
.logement h1 {
  font-size: 22px;
  font-weight: normal;
  text-align: left;
}
  }

